--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ on:
         type: string
       TYPE:
         default: ''
-        description: Type of release (service or artifact)
+        description: Type of release (service, artifact, or catalog)
         required: false
         type: string
 
@@ -32,8 +32,8 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       has-changes: ${{ steps.has-changes.outputs.HAS_CHANGES }}
-      release-version: ${{ steps.release-version.outputs.RELEASE_VERSION }}
-      project-name: ${{ steps.project-name.outputs.PROJECT_NAME }}
+      project-name: ${{ steps.extract.outputs.PROJECT_NAME }}
+      release-version: ${{ steps.extract.outputs.RELEASE_VERSION }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -56,46 +56,59 @@ jobs:
         run: |
           echo "No changes to release, failing..."
           exit 1
-      - name: Extract application name from settings.gradle.kts
-        id: project-name
+      - name: Extract project name and version
+        id: extract
         run: |
-          NAME=$(awk -F '=' '/^rootProject\.name/{gsub(/[[:space:]]*/,"",$2); gsub(/"/,"",$2); print $2}' settings.gradle.kts)
+          # Extract project name
+          NAME=$(awk -F '=' '/^rootProject\.name/ { gsub(/[[:space:]]*/,"",$2); gsub(/"/,"",$2); print $2 }' settings.gradle.kts)
           if [ -z "$NAME" ]; then
             echo "Error: No application name found in settings.gradle.kts" >&2
             exit 1
           fi
           echo "PROJECT_NAME=$NAME" >> $GITHUB_OUTPUT
-          echo "Extracted application name: $NAME"
-      - name: Extract version from gradle.properties
-        id: release-version
-        run: |
-          VERSION=$(awk -F '=' '/^version[[:space:]]*=/{gsub(/[[:space:]]*/,"",$2); sub(/-SNAPSHOT$/,"",$2); print $2}' gradle.properties)
+          echo "Extracted project name: $NAME"
+
+          # Extract version
+          VERSION=$(awk -F '=' '/^version[[:space:]]*=/{ gsub(/[[:space:]]*/,"",$2); sub(/-SNAPSHOT$/,"",$2); print $2 }' gradle.properties)
           if [ -z "$VERSION" ]; then
             echo "Error: No version found in gradle.properties" >&2
             exit 1
           fi
           echo "RELEASE_VERSION=$VERSION" >> $GITHUB_OUTPUT
           echo "Extracted release version: $VERSION"
+      - name: Un-snapshot catalog versions
+        if: ${{ inputs.TYPE == 'catalog' }}
+        run: |
+          if [ -f hlaeja.versions.toml ]; then
+            sed -i -E 's/^(hlaeja[A-Za-z]+[[:space:]]*=[[:space:]]*")([0-9]+\.[0-9]+\.[0-9]+)-SNAPSHOT(")/\1\2\3/' hlaeja.versions.toml
+
+            if ! git diff --quiet hlaeja.versions.toml; then
+              git add hlaeja.versions.toml
+              echo "Catalog versions updated"
+            else
+              echo "No changes in catalog versions"
+            fi
+          fi
       - name: Un-snapshot version and commit changes
         run: |
           sed -i "s/\(version\s*=\s*[0-9]\+\.[0-9]\+\.[0-9]\+\).*/\1/" gradle.properties
           sed -i "s/\(catalog\s*=\s*[0-9]\+\.[0-9]\+\.[0-9]\+\).*/\1/" gradle.properties
           if ! git diff --exit-code --quiet -- "gradle.properties"; then
             git add gradle.properties
-            git commit -m "[RELEASE] - Release version: ${{ steps.release-version.outputs.RELEASE_VERSION }}"
+            git commit -m "[RELEASE] - Release version: ${{ steps.extract.outputs.RELEASE_VERSION }}"
             git push origin master
           else
             echo "No changes to commit"
           fi
       - name: Add release tag
         run: |
-          git_tag="v${{ steps.release-version.outputs.RELEASE_VERSION }}"
+          git_tag="v${{ steps.extract.outputs.RELEASE_VERSION }}"
           git tag -a "$git_tag" -m "Release version $git_tag"
           git push origin "$git_tag"
       - name: Archive database files and commit changes
         if: ${{ inputs.DATABASE_FILES != '' }}
         run: |
-          version="${{ steps.release-version.outputs.RELEASE_VERSION }}"
+          version="${{ steps.extract.outputs.RELEASE_VERSION }}"
           type="${{ inputs.DATABASE_FILES }}"
           version_dir="${type}/v${version}"
           if [ -d "$type" ] && [ -n "$(ls -A $type/*."$type" 2>/dev/null)" ]; then
@@ -109,7 +122,7 @@ jobs:
           fi
       - name: Snapshot version and commit changes
         run: |
-          next_version=$(awk -F '.' '{print $1 "." $2+1 ".0"}' <<< "${{ steps.release-version.outputs.RELEASE_VERSION }}")
+          next_version=$(awk -F '.' '{print $1 "." $2+1 ".0"}' <<< "${{ steps.extract.outputs.RELEASE_VERSION }}")
           sed -i "s/\(version\s*=\s*\)[0-9.]*/\1${next_version}-SNAPSHOT/" gradle.properties
           echo "Bumped version to: ${next_version}-SNAPSHOT"
           if ! git diff --exit-code --quiet -- "gradle.properties"; then
@@ -135,6 +148,17 @@ jobs:
     needs: release
     if: needs.release.outputs.has-changes == 'true' && inputs.TYPE == 'artifact'
     uses: ./.github/workflows/publish-artifact.yml
+    secrets:
+      CI_BOT_PAT: ${{ secrets.CI_BOT_PAT }}
+    with:
+      JAVA_VERSION: ${{ inputs.JAVA_VERSION }}
+      PROJECT_NAME: ${{ needs.release.outputs.project-name }}
+      PROJECT_VERSION: ${{ needs.release.outputs.release-version }}
+
+  finalise-publish-catalog:
+    needs: release
+    if: needs.release.outputs.has-changes == 'true' && inputs.TYPE == 'catalog'
+    uses: ./.github/workflows/publish-catalog.yml
     secrets:
       CI_BOT_PAT: ${{ secrets.CI_BOT_PAT }}
     with:
